# natnet_client_ros

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  package.xml
config/: config.yaml
launch/: natnet_client.launch
script/: natnet_client_node.py  velocity_estimate.py
script/natnetclient/: natnet.py  tracker.py
